Fixing spacing, minimal implementation of action selection, map style improvement

--- a/proofs/map/map_style.css
+++ b/proofs/map/map_style.css
@@ -28,23 +28,36 @@ div{
         height: 100%;
         bottom: 100%;
         z-index: 1;
+        background: #1b6ae8; /* Old browsers */
+        background: -moz-linear-gradient(top,  #1b6ae8 9%, #3d992f 16%, #225e26 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(9%,#1b6ae8), color-stop(16%,#3d992f), color-stop(100%,#225e26)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  #1b6ae8 9%,#3d992f 16%,#225e26 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  #1b6ae8 9%,#3d992f 16%,#225e26 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  #1b6ae8 9%,#3d992f 16%,#225e26 100%); /* IE10+ */
+        background: linear-gradient(to bottom,  #1b6ae8 9%,#3d992f 16%,#225e26 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b6ae8', endColorstr='#225e26',GradientType=0 ); /* IE6-9 */
+
+
     }
 
         #map{
             color: red;
             border: silver 1px dotted;
-            width: 700px;
-            height: 500px;
+            width: 697px;
+            height: 498px;
             margin: auto;
+            margin-top: 50px;
             /*important to keep hero in place*/
             position: relative;
             /*text-align: center;*/
+            background-color: white;
         }
 
             #map_background{
                 width: 694px;
                 height: 100px;
                 background: blue;
+
             }
 
             .tile{
